--- a/src/features/navbar/navbar.component.html
+++ b/src/features/navbar/navbar.component.html
@@ -1,1 +1,19 @@
-<p>navbar works!</p>
+<div
+  class="relative mx-0 sm:mx-0 md:mx-0 lg:mx-28 xl:mx-36 mt-5 p-16 lg:p-32 border border-1 bg-cover bg-center opacity-85 rounded-lg"
+  style="background-image: url('/asset/p.png')"
+>
+  <!-- Profile Picture -->
+  <div
+    class="absolute top-12 lg:top-40 left-4 sm:left-5 lg:left-20 xl:left-28 flex items-center justify-center"
+  >
+    <div
+      class="rounded-full w-28 lg:w-40 h-28 lg:h-40 overflow-hidden border-double border-4 border-gray-500"
+    >
+      <img
+        src="/asset/image.png"
+        alt="Profile Picture"
+        class="w-full h-full object-cover"
+      />
+    </div>
+  </div>
+</div>
