--- a/src/features/experience/experience.component.html
+++ b/src/features/experience/experience.component.html
@@ -1,1 +1,61 @@
-<p>experience works!</p>
+<section class="p-10">
+  <h2 class="text-4xl font-bold text-gray-900 flex items-center gap-2">
+    <span class="text-primary">//</span> Experience
+  </h2>
+  <div class="mt-6 space-y-8 grid grid-cols-1 md:grid-cols-2 gap-6">
+    <!-- Associate Software Engineer -->
+    <div class="p-6 bg-gray-100 rounded-lg shadow-md h-full">
+      <h3 class="text-2xl font-semibold text-gray-800">
+        Associate Software Engineer
+      </h3>
+      <p class="text-gray-600">NDE Technology Services | Dec 2022 – Present</p>
+      <p class="text-gray-500 text-sm">Dhaka, Bangladesh</p>
+      <ul class="mt-4 text-lg text-gray-700 list-disc pl-6 space-y-2">
+        <li>
+          Developing scalable and responsive web applications using
+          <span class="font-semibold text-primary">Angular</span> and
+          <span class="font-semibold text-primary">TailwindCSS</span>.
+        </li>
+        <li>
+          Working on internal ERP features, including
+          <span class="font-semibold">inventory management</span> and
+          <span class="font-semibold">accounting module</span>.
+        </li>
+        <li>
+          Collaborating with cross-functional teams to gather requirements and
+          contribute to development.
+        </li>
+        <li>Documenting new features and code changes for future reference.</li>
+        <li>
+          Participating in code reviews, providing feedback, and learning from
+          senior developers.
+        </li>
+      </ul>
+    </div>
+
+    <!-- Software Engineer Intern -->
+    <div class="p-6 bg-gray-100 rounded-lg shadow-md h-full">
+      <h3 class="text-2xl font-semibold text-gray-800">
+        Software Engineer Intern
+      </h3>
+      <p class="text-gray-600">NDE Technology Services</p>
+      <ul class="mt-4 text-lg text-gray-700 list-disc pl-6 space-y-2">
+        <li>
+          Developed the
+          <span class="font-semibold">Permission Management System</span> and
+          integrated it with NDE Steel ERP.
+        </li>
+        <li>
+          Enhanced UI components using
+          <span class="font-semibold text-primary"
+            >HTML, CSS, and JavaScript</span
+          >.
+        </li>
+        <li>
+          Contributed to front-end development and improved
+          <span class="font-semibold">responsive design</span>.
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
