--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
-<!-- <app-footer></app-footer> -->
+<div class="bg-gray-50 min-h-[49.7rem]">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
