--- a/src/features/footer/footer.component.html
+++ b/src/features/footer/footer.component.html
@@ -1,1 +1,45 @@
-<p>footer works!</p>
+<div class="footer footer-center bg-neutral text-neutral-content p-5">
+  <p class="flex items-center gap-4">
+    <!-- GitHub Link -->
+    <a
+      href="https://github.com/bymshihab"
+      target="_blank"
+      class="hover:text-white"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        class="fill-current"
+      >
+        <path
+          d="M12 2C6.477 2 2 6.484 2 12.018c0 4.428 2.865 8.184 6.839 9.526.5.092.682-.218.682-.486 0-.237-.008-.866-.013-1.7-2.782.604-3.369-1.344-3.369-1.344-.455-1.164-1.111-1.475-1.111-1.475-.908-.622.07-.61.07-.61 1.003.07 1.53 1.032 1.53 1.032.892 1.53 2.341 1.088 2.91.833.092-.646.35-1.088.635-1.339-2.22-.253-4.555-1.115-4.555-4.964 0-1.096.392-1.993 1.03-2.694-.103-.253-.446-1.274.097-2.655 0 0 .84-.269 2.75 1.026a9.535 9.535 0 0 1 2.5-.34c.85.003 1.705.115 2.5.34 1.91-1.295 2.75-1.026 2.75-1.026.544 1.381.2 2.402.097 2.655.64.701 1.03 1.598 1.03 2.694 0 3.86-2.34 4.707-4.567 4.955.359.309.678.92.678 1.854 0 1.339-.012 2.42-.012 2.747 0 .27.18.583.688.485A10.006 10.006 0 0 0 22 12.018C22 6.484 17.523 2 12 2z"
+        ></path>
+      </svg>
+    </a>
+
+    <!-- LeetCode Link -->
+    <a
+      href="https://leetcode.com/u/khaledshihab221/"
+      target="_blank"
+      class="hover:text-gray-400"
+    >
+      <svg
+        fill="white"
+        width="20px"
+        height="20px"
+        viewBox="0 0 32 32"
+        xmlns="http://www.w3.org/2000/svg"
+        class="text-white"
+      >
+        <path
+          d="M21.469 23.907l-3.595 3.473c-0.624 0.625-1.484 0.885-2.432 0.885s-1.807-0.26-2.432-0.885l-5.776-5.812c-0.62-0.625-0.937-1.537-0.937-2.485 0-0.952 0.317-1.812 0.937-2.432l5.76-5.844c0.62-0.619 1.5-0.859 2.448-0.859s1.808 0.26 2.432 0.885l3.595 3.473c0.687 0.688 1.823 0.663 2.536-0.052 0.708-0.713 0.735-1.848 0.047-2.536l-3.473-3.511c-0.901-0.891-2.032-1.505-3.261-1.787l3.287-3.333c0.688-0.687 0.667-1.823-0.047-2.536s-1.849-0.735-2.536-0.052l-13.469 13.469c-1.307 1.312-1.989 3.113-1.989 5.113 0 1.996 0.683 3.86 1.989 5.168l5.797 5.812c1.307 1.307 3.115 1.937 5.115 1.937 1.995 0 3.801-0.683 5.109-1.989l3.479-3.521c0.688-0.683 0.661-1.817-0.052-2.531s-1.849-0.74-2.531-0.052zM27.749 17.349h-13.531c-0.932 0-1.692 0.801-1.692 1.791 0 0.991 0.76 1.797 1.692 1.797h13.531c0.933 0 1.693-0.807 1.693-1.797 0-0.989-0.76-1.791-1.693-1.791z"
+        />
+      </svg>
+    </a>
+
+    <!-- Address -->
+    <span class="text-sm"> Notun Bazar, Dhaka, Bangladesh </span>
+  </p>
+</div>
