--- a/src/features/navbar/navbar.component.html
+++ b/src/features/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<div
+<!-- <div
   class="relative mx-0 sm:mx-0 md:mx-0 lg:mx-28 xl:mx-36 mt-5 p-16 lg:p-32 border border-1 bg-cover bg-center opacity-85 rounded-lg"
   style="background-image: url('/asset/p.png')"
 >
-  <!-- Profile Picture -->
+
   <div
     class="absolute top-12 lg:top-40 left-4 sm:left-5 lg:left-20 xl:left-28 flex items-center justify-center"
   >
@@ -16,4 +16,16 @@
       />
     </div>
   </div>
-</div>
+</div> -->
+
+<nav class="p-4 bg-gray-800 text-white flex justify-between">
+  <h1 class="text-xl font-bold cursor-pointer" routerLink="/">Shihab</h1>
+
+  <ul class="flex space-x-4">
+    <li><a routerLink="/" class="hover:underline">Home</a></li>
+
+    <li><a routerLink="/experience" class="hover:underline">Experience</a></li>
+    <li><a routerLink="/projects" class="hover:underline">Projects</a></li>
+    <li><a routerLink="/contact" class="hover:underline">Contact</a></li>
+  </ul>
+</nav>
