--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -77,7 +77,7 @@
         target="_blank"
         class="inline-flex items-center gap-2 px-4 py-2 text-white bg-blue-600 rounded-lg shadow-lg hover:bg-blue-700 transition"
       >
-        <img src="/asset/linkedin-original.svg" alt="LinkedIn" class="h-5" />
+        <img src="/asset/linkedin.svg" alt="LinkedIn" class="h-5" />
         Connect on LinkedIn
       </a>
     </div>
