--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,7 +28,7 @@
         target="_blank"
         class="text-blue-500 hover:underline"
       >
-        github.com/your-github
+        github.com/bymshihab
       </a>
     </p>
 
@@ -40,7 +40,7 @@
         target="_blank"
         class="text-blue-500 hover:underline"
       >
-        leetcode.com/your-leetcode
+        leetcode.com/khaledshihab221
       </a>
     </p>
 
