--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
       <span class="text-primary">//</span> Md. Khaled Jubair Shihab
     </h2>
     <p class="text-lg text-gray-700 font-medium mt-2">
-      Frontend Software Engineer & Content Writer | JavaScript & TypeScript
+      Software Engineer & Content Writer | JavaScript & TypeScript
     </p>
 
     <!-- Work & Education -->
