--- a/src/features/navbar/navbar.component.html
+++ b/src/features/navbar/navbar.component.html
@@ -18,6 +18,11 @@
   </div>
 </div> -->
 
+<div class="marquee-container flex items-center justify-between px-4">
+  <div class="marquee text-green-950 border-lime-800 font-semibold">
+    <p>#OPENTOWORK</p>
+  </div>
+</div>
 <nav class="p-4 bg-gray-800 text-white flex justify-between">
   <h1 class="text-xl font-bold cursor-pointer" routerLink="/">Shihab</h1>
 
