--- a/src/features/navbar/navbar.component.html
+++ b/src/features/navbar/navbar.component.html
@@ -19,9 +19,9 @@
 </div> -->
 
 <div class="marquee-container flex items-center justify-between px-4">
-  <div class="marquee text-green-950 border-lime-800 font-semibold">
+  <!-- <div class="marquee text-green-950 border-lime-800 font-semibold">
     <p>#OPENTOWORK</p>
-  </div>
+  </div> -->
 </div>
 <nav class="p-4 bg-gray-800 text-white flex justify-between">
   <h1 class="text-xl font-bold cursor-pointer" routerLink="/">Shihab</h1>
