--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
-<div class="bg-gray-50 min-h-[49.7rem]">
-  <router-outlet></router-outlet>
+<div class="flex flex-col min-h-screen">
+  <app-navbar></app-navbar>
+
+  <div class="flex-grow bg-gray-50">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer class="mt-auto"></app-footer>
 </div>
-<app-footer></app-footer>
